# pvss

./: .gitignore  README.md
.github/workflows/: ci.yml
benchmarks/: README.md  config.json  run_benchmarks.sh
benchmarks/results/: report.md
benchmarks/results_insecure/: report.md
benchmarks/results_production/: report.md
benchmarks/scripts/: benchmark_circuit.sh  generate_report.sh  run_benchmarks.sh
circuits/: Nargo.toml  README.md
circuits/production/enc_bfv/: Nargo.toml
circuits/production/enc_bfv/src/: main.nr
circuits/src/: constants.nr  lib.nr  pk_circuit.nr  pk_constants.nr  polynomial.nr
circuits/src/crypto/: mod.nr  pk_trbfv.nr
circuits/src/crypto/dec_bfv/: dec_bfv.nr  mod.nr
circuits/src/crypto/dec_bfv_no_hom_add/: dec_bfv_no_hom_add.nr  mod.nr
circuits/src/crypto/dec_pvw/: dec_pvw.nr  (+1 more)
circuits/src/math/: mod.nr  modular_fns.nr  poly.nr  polynomial.nr  tests.nr
constants/: Nargo.toml
constants/src/: lib.nr  set_bfv_8192_100.nr
crates/: Cargo.toml  rust-toolchain.toml
crates/example/: Cargo.toml  README.md
crates/example/src/: lib.rs  main.rs
crates/generator/: Cargo.toml  README.md
crates/generator/output/: constants.nr
crates/generator/src/: bfv.rs  bounds.rs  cli.rs  lib.rs  sk_shares.rs  utils.rs  vectors.rs
crates/generator/src/generators/: mod.rs  noir.rs  toml.rs
crates/output/: constants.nr
crates/polynomial/: Cargo.toml  README.md
crates/polynomial/src/: lib.rs
crates/public_key/: Cargo.toml
crates/public_key/src/: pk.rs
e3_lib/: Nargo.toml
e3_lib/src/: lib.nr
e3_lib/src/core/: greco.nr  mod.nr
e3_lib/src/math/: helpers.nr  mod.nr  polynomial.nr  safe.nr
examples/: README.md
examples/dec_bfv/: Nargo.toml
examples/dec_bfv/src/: main.nr
examples/dec_bfv_no_hom_add/: Nargo.toml  Prover.toml
examples/dec_bfv_no_hom_add/src/: main.nr
examples/dec_share_agg_trbfv/: Nargo.toml  Prover.toml  Prover1.toml
examples/dec_share_agg_trbfv/src/: main.nr
examples/dec_share_agg_trbfv_no_bn/: Nargo.toml  Prover.toml
examples/dec_share_agg_trbfv_no_bn/src/: main.nr
examples/dec_share_trbfv/: Nargo.toml
examples/dec_share_trbfv/src/: main.nr
examples/enc_bfv/: Nargo.toml  Prover.toml
examples/enc_bfv/src/: main.nr
examples/enc_bfv_recursion/: BENCHMARK.md  Nargo.toml  README.md  generate-recursion-proofs.ts  package-lock.json  package.json
examples/enc_bfv_recursion/src/: main.nr
examples/enc_trbfv/: Nargo.toml  Prover.toml
examples/enc_trbfv/src/: main.nr
examples/example/: Nargo.toml  Prover.toml  README.md
examples/example/src/: main.nr
examples/pk_agg_trbfv/: Nargo.toml  Prover.toml
examples/pk_agg_trbfv/src/: main.nr
examples/pk_bfv/: Nargo.toml
examples/pk_bfv/src/: main.nr
examples/pk_circuit/: Nargo.toml  Prover.toml  README.md
examples/pk_circuit/src/: main.nr
examples/pk_pvw/: Nargo.toml  Prover.toml
examples/pk_pvw/src/: main.nr
examples/pk_trbfv/: Nargo.toml
examples/pk_trbfv/src/: main.nr
examples/sk_share_1_opt/: Nargo.toml
examples/sk_share_1_opt/src/: main.nr
examples/sk_share_2/: Nargo.toml  Prover.toml
examples/sk_share_2/src/: main.nr
examples/sk_shares/: Nargo.toml  Prover.toml
examples/sk_shares/src/: main.nr
examples/sks_circuit/: Nargo.toml  Prover.toml  README.md
examples/sks_circuit/src/: main.nr
lib/: Nargo.toml
lib/src/core/: bfv_dec.nr  bfv_dec_no_hom_add.nr  bfv_enc.nr  bfv_pk.nr  commitments.nr  greco.nr  mod.nr  trbfv_dec_share.nr  trbfv_dec_shares_agg.nr  trbfv_pk.nr  trbfv_pk_agg.nr  trbfv_verify_shares.nr  trbfv_verify_shares_esm.nr
lib/src/math/: commitments.nr  mod.nr
rs-script/: Cargo.toml
(+34 files in other folders)
