[package]
name = "e3-greco-generator"
version.workspace = true
edition.workspace = true

[lib]
name = "greco_generator"
path = "src/lib.rs"

[[bin]]
name = "generator"
path = "src/bin/generator.rs"

[dependencies]
polynomial = { workspace = true }
blake3 = { workspace = true }
fhe = { workspace = true }
fhe-math = { workspace = true }
fhe-traits = { workspace = true }
itertools = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { version = "4.0", features = ["derive"] }