[package]
name = "public_key"
version.workspace = true
edition.workspace = true

[dependencies]
fhe = { workspace = true }
rand = { workspace = true }
polynomial = { workspace = true }
num-bigint = { workspace = true, features = ["serde"] }
num-traits = { workspace = true }
serde = { workspace = true, optional = true }